--- a/build.gradle
+++ b/build.gradle
@@ -800,7 +800,7 @@ project(':core') {
     testCompile libs.apachedsJdbmPartition
     testCompile libs.junit
     testCompile libs.scalatest
-    testCompile libs.slf4jlog4j
+    testCompile libs.slf4jreload4j
     testCompile libs.jfreechart
   }
   
@@ -819,8 +819,8 @@ project(':core') {
 
   tasks.create(name: "copyDependantLibs", type: Copy) {
     from (configurations.testRuntime) {
-      include('slf4j-log4j12*')
-      include('log4j*jar')
+      include('slf4j-reload4j*jar')
+      include('reload4j*jar')
     }
     from (configurations.runtime) {
       exclude('kafka-clients*')
@@ -1049,7 +1049,7 @@ project(':clients') {
     testCompile libs.junit
     testCompile libs.mockitoCore
 
-    testRuntime libs.slf4jlog4j
+    testRuntime libs.slf4jreload4j
     testRuntime libs.jacksonDatabind
     testRuntime libs.jacksonJDK8Datatypes
     testCompile libs.jacksonJaxrsJsonProvider
@@ -1189,7 +1189,7 @@ project(':tools') {
     testCompile libs.powermockJunit4
     testCompile libs.powermockEasymock
 
-    testRuntime libs.slf4jlog4j
+    testRuntime libs.slf4jreload4j
   }
 
   javadoc {
@@ -1198,8 +1198,8 @@ project(':tools') {
 
   tasks.create(name: "copyDependantLibs", type: Copy) {
     from (configurations.testRuntime) {
-      include('slf4j-log4j12*')
-      include('log4j*jar')
+      include('slf4j-reload4j*jar')
+      include('reload4j*jar')
     }
     from (configurations.runtime) {
       exclude('kafka-clients*')
@@ -1243,7 +1243,7 @@ project(':streams') {
     testCompile libs.hamcrest
 
     testRuntimeOnly project(':streams:test-utils')
-    testRuntime libs.slf4jlog4j
+    testRuntime libs.slf4jreload4j
   }
 
   javadoc {
@@ -1253,8 +1253,8 @@ project(':streams') {
 
   tasks.create(name: "copyDependantLibs", type: Copy) {
     from (configurations.testRuntime) {
-      include('slf4j-log4j12*')
-      include('log4j*jar')
+      include('slf4j-reload4j*jar')
+      include('reload4j*jar')
     }
     from (configurations.runtime) {
       exclude('kafka-clients*')
@@ -1358,7 +1358,7 @@ project(':streams:streams-scala') {
     testCompile libs.easymock
     testCompile libs.hamcrest
 
-    testRuntime libs.slf4jlog4j
+    testRuntime libs.slf4jreload4j
   }
 
   javadoc {
@@ -1392,7 +1392,7 @@ project(':streams:test-utils') {
     testCompile libs.easymock
     testCompile libs.hamcrest
 
-    testRuntime libs.slf4jlog4j
+    testRuntime libs.slf4jreload4j
   }
 
   javadoc {
@@ -1425,7 +1425,7 @@ project(':support-metrics-client') {
     compile libs.commonsCompress
     compile libs.httpclient
     compile libs.httpmime
-    compile libs.slf4jlog4j
+    compile libs.slf4jreload4j
     compile project(':clients')
     // projects that require the KafkaSubmitter have to add the Core dependency explicitly, typically
     // they only need ConfluentSubmitter
@@ -1469,8 +1469,8 @@ project(':support-metrics-client') {
 
   tasks.create(name: "copyDependantLibs", type: Copy) {
     from (configurations.testRuntime) {
-      include('slf4j-log4j12*')
-      include('log4j*jar')
+      include('slf4j-reload4j*jar')
+      include('reload4j*jar')
     }
     from (configurations.runtime) {
     }
@@ -1512,7 +1512,7 @@ project(':support-metrics-common') {
     compile libs.jacksonDatabind
     compile libs.httpclient
     compile libs.httpmime
-    compile libs.slf4jlog4j
+    compile libs.slf4jreload4j
     compile project(':clients')
     // projects that require the KafkaSubmitter have to add the Core dependency explicitly, typically
     // they only need ConfluentSubmitter
@@ -1554,8 +1554,8 @@ project(':support-metrics-common') {
 
   tasks.create(name: "copyDependantLibs", type: Copy) {
     from (configurations.testRuntime) {
-      include('slf4j-log4j12*')
-      include('log4j*jar')
+      include('slf4j-reload4j*jar')
+      include('reload4j*jar')
     }
     from (configurations.runtime) {
     }
@@ -1590,7 +1590,7 @@ project(':streams:examples') {
   dependencies {
     compile project(':streams')
     compile project(':connect:json')  // this dependency should be removed after we unify data API
-    compile libs.slf4jlog4j
+    compile libs.slf4jreload4j
 
     testCompile project(':streams:test-utils')
     testCompile project(':clients').sourceSets.test.output // for org.apache.kafka.test.IntegrationTest
@@ -1618,7 +1618,10 @@ project(':streams:upgrade-system-tests-0100') {
   archivesBaseName = "kafka-streams-upgrade-system-tests-0100"
 
   dependencies {
-    testCompile libs.kafkaStreams_0100
+    testCompile(libs.kafkaStreams_0100) {
+      exclude group: 'org.slf4j', module: 'slf4j-log4j12'
+      exclude group: 'log4j', module: 'log4j'
+    }
   }
 
   systemTestLibs {
@@ -1630,7 +1633,10 @@ project(':streams:upgrade-system-tests-0101') {
   archivesBaseName = "kafka-streams-upgrade-system-tests-0101"
 
   dependencies {
-    testCompile libs.kafkaStreams_0101
+    testCompile(libs.kafkaStreams_0101) {
+      exclude group: 'org.slf4j', module: 'slf4j-log4j12'
+      exclude group: 'log4j', module: 'log4j'
+    }
   }
 
   systemTestLibs {
@@ -1786,7 +1792,7 @@ project(':log4j-appender') {
 
   dependencies {
     compile project(':clients')
-    compile libs.slf4jlog4j
+    compile libs.slf4jreload4j
 
     testCompile project(':clients').sourceSets.test.output
     testCompile libs.junit
@@ -1809,7 +1815,7 @@ project(':connect:api') {
 
     testCompile libs.junit
 
-    testRuntime libs.slf4jlog4j
+    testRuntime libs.slf4jreload4j
     testCompile project(':clients').sourceSets.test.output
   }
 
@@ -1824,8 +1830,8 @@ project(':connect:api') {
 
   tasks.create(name: "copyDependantLibs", type: Copy) {
     from (configurations.testRuntime) {
-      include('slf4j-log4j12*')
-      include('log4j*jar')
+      include('slf4j-reload4j*jar')
+      include('reload4j*jar')
     }
     from (configurations.runtime) {
       exclude('kafka-clients*')
@@ -1852,7 +1858,7 @@ project(':connect:transforms') {
     testCompile libs.powermockJunit4
     testCompile libs.powermockEasymock
 
-    testRuntime libs.slf4jlog4j
+    testRuntime libs.slf4jreload4j
     testCompile project(':clients').sourceSets.test.output
   }
 
@@ -1862,8 +1868,8 @@ project(':connect:transforms') {
 
   tasks.create(name: "copyDependantLibs", type: Copy) {
     from (configurations.testRuntime) {
-      include('slf4j-log4j12*')
-      include('log4j*jar')
+      include('slf4j-reload4j*jar')
+      include('reload4j*jar')
     }
     from (configurations.runtime) {
       exclude('kafka-clients*')
@@ -1892,7 +1898,7 @@ project(':connect:json') {
     testCompile libs.powermockJunit4
     testCompile libs.powermockEasymock
 
-    testRuntime libs.slf4jlog4j
+    testRuntime libs.slf4jreload4j
     testCompile project(':clients').sourceSets.test.output
   }
 
@@ -1902,8 +1908,8 @@ project(':connect:json') {
 
   tasks.create(name: "copyDependantLibs", type: Copy) {
     from (configurations.testRuntime) {
-      include('slf4j-log4j12*')
-      include('log4j*jar')
+      include('slf4j-reload4j*jar')
+      include('reload4j*jar')
     }
     from (configurations.runtime) {
       exclude('kafka-clients*')
@@ -1954,7 +1960,7 @@ project(':connect:runtime') {
     testCompile project(':core')
     testCompile project(':core').sourceSets.test.output
 
-    testRuntime libs.slf4jlog4j
+    testRuntime libs.slf4jreload4j
   }
 
   javadoc {
@@ -1963,8 +1969,8 @@ project(':connect:runtime') {
 
   tasks.create(name: "copyDependantLibs", type: Copy) {
     from (configurations.testRuntime) {
-      include('slf4j-log4j12*')
-      include('log4j*jar')
+      include('slf4j-reload4j*jar')
+      include('reload4j*jar')
     }
     from (configurations.runtime) {
       exclude('kafka-clients*')
@@ -2027,7 +2033,7 @@ project(':connect:file') {
     testCompile libs.powermockJunit4
     testCompile libs.powermockEasymock
 
-    testRuntime libs.slf4jlog4j
+    testRuntime libs.slf4jreload4j
     testCompile project(':clients').sourceSets.test.output
   }
 
@@ -2037,8 +2043,8 @@ project(':connect:file') {
 
   tasks.create(name: "copyDependantLibs", type: Copy) {
     from (configurations.testRuntime) {
-      include('slf4j-log4j12*')
-      include('log4j*jar')
+      include('slf4j-reload4j*jar')
+      include('reload4j*jar')
     }
     from (configurations.runtime) {
       exclude('kafka-clients*')
@@ -2067,7 +2073,7 @@ project(':connect:basic-auth-extension') {
     testCompile libs.powermockEasymock
     testCompile project(':clients').sourceSets.test.output
 
-    testRuntime libs.slf4jlog4j
+    testRuntime libs.slf4jreload4j
     testRuntime libs.jerseyContainerServlet
   }
 
@@ -2077,8 +2083,8 @@ project(':connect:basic-auth-extension') {
 
   tasks.create(name: "copyDependantLibs", type: Copy) {
     from (configurations.testRuntime) {
-      include('slf4j-log4j12*')
-      include('log4j*jar')
+      include('slf4j-reload4j*jar')
+      include('reload4j*jar')
     }
     from (configurations.runtime) {
       exclude('kafka-clients*')
@@ -2111,7 +2117,7 @@ project(':connect:mirror') {
     testCompile project(':core').sourceSets.test.output
 
     testRuntime project(':connect:runtime')
-    testRuntime libs.slf4jlog4j
+    testRuntime libs.slf4jreload4j
   }
 
   javadoc {
@@ -2120,8 +2126,8 @@ project(':connect:mirror') {
 
   tasks.create(name: "copyDependantLibs", type: Copy) {
     from (configurations.testRuntime) {
-      include('slf4j-log4j12*')
-      include('log4j*jar')
+      include('slf4j-reload4j*jar')
+      include('reload4j*jar')
     }
     from (configurations.runtime) {
       exclude('kafka-clients*')
@@ -2146,7 +2152,7 @@ project(':connect:mirror-client') {
     testCompile libs.junit
     testCompile project(':clients').sourceSets.test.output
 
-    testRuntime libs.slf4jlog4j
+    testRuntime libs.slf4jreload4j
   }
 
   javadoc {
@@ -2155,8 +2161,8 @@ project(':connect:mirror-client') {
 
   tasks.create(name: "copyDependantLibs", type: Copy) {
     from (configurations.testRuntime) {
-      include('slf4j-log4j12*')
-      include('log4j*jar')
+      include('slf4j-reload4j*jar')
+      include('reload4j*jar')
     }
     from (configurations.runtime) {
       exclude('kafka-clients*')
