--- a/gradle/dependencies.gradle
+++ b/gradle/dependencies.gradle
@@ -82,7 +82,7 @@ versions += [
   jersey: "2.34",
   jmh: "1.21",
   hamcrest: "2.1",
-  log4j: "1.2.17-cp2.2",
+  reload4j: "1.2.19",
   scalaLogging: "3.9.2",
   jaxb: "2.3.0",
   jaxrs: "2.1.1",
@@ -115,7 +115,7 @@ versions += [
   scoverage: "1.4.0",
   scoveragePlugin: "2.5.0",
   shadowPlugin: "4.0.4",
-  slf4j: "1.7.28",
+  slf4j: "1.7.36",
   snappy: "1.1.7.3",
   spotbugs: "3.1.12",
   spotbugsPlugin: "1.6.9",
@@ -172,7 +172,7 @@ libs += [
   kafkaStreams_21: "org.apache.kafka:kafka-streams:$versions.kafka_21",
   kafkaStreams_22: "org.apache.kafka:kafka-streams:$versions.kafka_22",
   kafkaStreams_23: "org.apache.kafka:kafka-streams:$versions.kafka_23",
-  log4j: "io.confluent:confluent-log4j:$versions.log4j",
+  log4j: "ch.qos.reload4j:reload4j:$versions.reload4j",
   lz4: "org.lz4:lz4-java:$versions.lz4",
   metrics: "com.yammer.metrics:metrics-core:$versions.metrics",
   mockitoCore: "org.mockito:mockito-core:$versions.mockito",
@@ -191,7 +191,7 @@ libs += [
   scoveragePlugin: "org.scoverage:scalac-scoverage-plugin_$versions.baseScala:$versions.scoverage",
   scoverageRuntime: "org.scoverage:scalac-scoverage-runtime_$versions.baseScala:$versions.scoverage",
   slf4jApi: "org.slf4j:slf4j-api:$versions.slf4j",
-  slf4jlog4j: "org.slf4j:slf4j-log4j12:$versions.slf4j",
+  slf4jreload4j: "org.slf4j:slf4j-reload4j:$versions.slf4j",
   snappy: "org.xerial.snappy:snappy-java:$versions.snappy",
   zookeeper: "org.apache.zookeeper:zookeeper:$versions.zookeeper",
   jfreechart: "jfreechart:jfreechart:$versions.jfreechart",
